fix overflow

--- a/src/blocks/components/button/button.scss
+++ b/src/blocks/components/button/button.scss
@@ -17,12 +17,12 @@
 
     &:hover,
     &:visited:hover {
-        background: linear-gradient(90deg, #0B934A 2.61%, #026E47 112.6%);
+        background: linear-gradient(90deg, #0B934A 2.61%, #026E47 112.6%)!important;
     }
 
     &:active,
     &:visited:active {
-        background: linear-gradient(90deg, #076432 2.61%, #013C27 112.6%);
+        background: linear-gradient(90deg, #076432 2.61%, #013C27 112.6%)!important;
     }
 
     &:disabled,
