--- a/src/blocks/components/slider/slider.scss
+++ b/src/blocks/components/slider/slider.scss
@@ -1,21 +1,15 @@
 .slider {
+    height: 100%;
+    background: #000000;
     position: relative;
-    background-color: #000000;
-
-    &__list {
-        margin: 0;
-        padding: 0;
-        position: relative;
-    }
 
     &__item {
-        list-style: none;
         display: flex!important;
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
         height: 100vh!important;
-        min-height: 600px;
+        min-height: 568px;
         padding: 50px 63px;
         position: relative;
     }
