--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -7,7 +7,7 @@
 
 html {
     font-size: 18px;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -39,13 +39,14 @@ img {
 }
 
 .page-wrapper {
+    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     -webkit-overflow-scrolling: touch;
     min-width: 320px;
     width: 100%;
-    min-height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
@@ -65,9 +66,12 @@ img {
 }
 
 .slider-wrapper {
+    flex: 0 0 auto;
     display: none;
     width: 40vw;
-    min-height: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     @media (min-width:1024px) {
         display: inline-block;
